--- a/main.bib
+++ b/main.bib
@@ -195,8 +195,11 @@
 }
 
 @article{au-sketches,
-  title={Sketches for arithmetic universes},
   author={Vickers, Steven},
-  journal={arXiv preprint arXiv:1608.01559},
-  year={2016}
+  year={2016},
+  month={08},
+  pages={},
+  title={Sketches for arithmetic universes},
+  journal={Journal of Logic and Analysis},
+  doi={10.4115/jla.2019.11.FT4}
 }
