More small fixes

--- a/main.bib
+++ b/main.bib
@@ -203,3 +203,34 @@
   journal={Journal of Logic and Analysis},
   doi={10.4115/jla.2019.11.FT4}
 }
+
+@book{hirschhorn,
+  title={Model categories and their localizations},
+  author={Hirschhorn, Philip S},
+  number={99},
+  year={2009},
+  publisher={American Mathematical Soc.}
+}
+
+@misc{enriched-model-cats,
+  title={Enriched model categories and presheaf categories},
+  author={Bertrand Guillou and J. P. May},
+  year={2011},
+  eprint={1110.3567},
+  archivePrefix={arXiv},
+  primaryClass={math.AT}
+}
+
+@article{groupoid-model-cat,
+  author = "Anderson, D. W.",
+  journal = "Bulletin of the American Mathematical Society",
+  month = "09",
+  number = "5",
+  pages = "765--788",
+  publisher = "American Mathematical Society",
+  title = "Fibrations and geometric realizations",
+  url = "https://projecteuclid.org:443/euclid.bams/1183541139",
+  volume = "84",
+  year = "1978"
+}
+
